@@ -25,9 +25,10 @@
 
 <p>You can view the changelog dialog again at any time from the <i>about</i> section.</p>
 
-<h3>Version 0.9.44 beta6</h3>
+<h3>Version 0.9.45</h3>
 
 <ol>
+    <li><b>NEW:</b> Moved the stuff from the <i>about</i> dialog to a whole new screen and added useful links.</li>
     <li><b>FIX:</b> Even though the Last.fm app and web page say something is scrobbling, the
         scrobble doesn't actually get saved at the end. <i>Thanks to Tim Malseed for that.</i>
     </li>
