@@ -52,8 +52,6 @@
     <string name="action_go_to_album">Gehe zum Album</string>
     <string name="label_current_playing_queue">Warteschlange</string>
     <string name="save_as_playlist">Als Wiedergabeliste speichern</string>
-    <string name="credits_3">Icon von</string>
-    <string name="credits_1">"Phonograph ist ein kostenloser Musikplayer im Material Design. Gemacht von"</string>
     <string name="no_results">Keine Ergebnisse</string>
     <string name="action_re_download_artist_image">Interpretenbild aktualisieren</string>
     <string name="updated_artist_image">Interpreten Bild aktualisiert.</string>
@@ -177,4 +175,29 @@
     <string name="back">zurück</string>
     <string name="support_development">Unterstütze die Entwicklung</string>
     <string name="thank_you">Vielen Dank!</string>
+    <string name="restored_previous_purchases">Bisherige Käufe wiederhergestellt.</string>
+    <string name="play_store_illustration_by">Play Store Illustration von</string>
+    <string name="version">Version</string>
+    <string name="application">Anwendung</string>
+    <string name="author">Autor</string>
+    <string name="add_to_google_plus_circles">Zu Google Plus Kreisen hinzufügen</string>
+    <string name="follow_on_twitter">Auf Twitter folgen</string>
+    <string name="fork_on_git_hub">Auf GitHub forken</string>
+    <string name="visit_website">Website besuchen</string>
+    <string name="report_bugs">Fehler melden</string>
+    <string name="report_bugs_summary">Melde Fehler oder schlage neue Features vor.</string>
+    <string name="join_community">Trete der Google Plus Community bei</string>
+    <string name="join_community_summary">Wenn du Hilfe brauchst oder eine Frage hast, bist du bei der Phonograph Community an der richtigen Adresse.</string>
+    <string name="translate">Übersetze</string>
+    <string name="translate_summary">Helfe dabei, Phonograph in deine Sprache zu übersetzen.</string>
+    <string name="rate_on_google_play">Bewerten</string>
+    <string name="rate_on_google_play_summary">Hinterlasse eine positive Bewertung auf Google Play, wenn dir Phonograph gefällt.</string>
+    <string name="donate">Spende</string>
+    <string name="donate_summary">Wenn du denkst, dass ich es verdient hätte für meine Arbeit bezahlt zu werden, kannst du mir hier ein paar Euro da lassen.</string>
+    <string name="aidan_follestad_summary">Für die Theme Engine und andere tolle Sachen.</string>
+    <string name="michael_cook_summary">Für das schöne Material App Icon.</string>
+    <string name="maarten_corpel_summary">Für das machen der Play Store Illustration und des leeren Album Covers.</string>
+    <string name="aleksandar_tesic_summary">Für die Hilfe beim Design.</string>
+    <string name="website">Website</string>
+    <string name="loading_products">Produkte werden geladen…</string>
 </resources>
