@@ -40,8 +40,6 @@
     <string name="action_go_to_album">Gå til album</string>
     <string name="label_current_playing_queue">Songkø</string>
     <string name="save_as_playlist">Lagre som speleliste</string>
-    <string name="credits_3">Ikon av</string>
-    <string name="credits_1">"Phonograph er ein gratis musikkspelar i material design av"</string>
     <string name="no_results">Ingen resultat</string>
     <string name="action_re_download_artist_image">Oppdater artistbilete</string>
     <string name="updating">Oppdaterer...</string>
