@@ -52,8 +52,6 @@
     <string name="action_go_to_album">Ir para o álbum</string>
     <string name="label_current_playing_queue">Fila de execução</string>
     <string name="save_as_playlist">Salvar como playlist</string>
-    <string name="credits_3">Ícone por</string>
-    <string name="credits_1">"O Phonograph é um player de música completamente grátis com Material Design feito por"</string>
     <string name="no_results">Sem resultados</string>
     <string name="action_re_download_artist_image">Atualizar imagem do artista</string>
     <string name="updated_artist_image">Imagem do artista atualizado.</string>
@@ -177,4 +175,5 @@
     <string name="back">voltar</string>
     <string name="support_development">Apoiar o desenvolvimento</string>
     <string name="thank_you">Obrigado!</string>
+    <string name="play_store_illustration_by">Ilustração da Play Store por</string>
 </resources>
