@@ -52,8 +52,6 @@
     <string name="action_go_to_album">Albüme git</string>
     <string name="label_current_playing_queue">Çalma sırası</string>
     <string name="save_as_playlist">Çalma listesi olarak kaydet</string>
-    <string name="credits_3">Simge tasarımı</string>
-    <string name="credits_1">"Phonograph tamamen ücretsiz, material tasarımlı müzik çalar. Yapan"</string>
     <string name="no_results">Sonuç bulunamadı</string>
     <string name="action_re_download_artist_image">Sanatçı resmini güncelle</string>
     <string name="updated_artist_image">Sanatçı resmi güncellendi.</string>
