@@ -1,3 +1,4 @@
-FIX: Even though the Last.fm app and web page say something is scrobbling, the scrobble doesn't actually get saved at the end. <i>Thanks to Tim Malseed for that.</i>
+NEW: Moved the stuff from the about dialog to a whole new screen and added useful links.
+FIX: Even though the Last.fm app and web page say something is scrobbling, the scrobble doesn't actually get saved at the end. Thanks to Tim Malseed for that.
 FIX: Fixed the plural typo in the artist list.
 FIX: Toolbar had no shadow in the playlist view.
